tests/fixtures/invalid/list_div_none.py
# Cannot divide List[int] and None
x: float = [1, 2, 3] / None
